tests/errors/multiple_variable_declaration/different_types.meth
int x = 6;
str x = "hei";